--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ h1, h2, h3 {
     font-weight: bold;
 }
 
+h2 {
+   font-size: 20px
+      
+}
+
 h4 {
   font-family: 'Roboto', sans-serif;
   color: #044723;
