--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -3,13 +3,14 @@
 
    
 .socialnetworks {
+	.socialnetworks {
 	background-color: #C5D9C0;
-	padding: 50px;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding: 20px;
+	padding-top: 2px;
+	padding-bottom: 2px;
 	margin: 20px;
-	margin-right: 915px;
-  width: 250px;
+	margin-right: 750px;
+	width: 400px;
 }
 
 /* In the homepage */
@@ -43,7 +44,7 @@
 	border-color: #044723;
 	padding: 30px;
 	border-radius: 2px;
-	width: 500px;
+	width: 400px;
 	text-align: justify;
 	margin-bottom: 30px;
 	margin-right: 110px;
