--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -57,11 +57,15 @@
 	width: 140px;
 	height: 140px;
 	border-radius: 35%;
-	margin-left: 200px; 
+	margin-left: 0px; 
 	position: left;
+	display: flex;
 }
 .card-green-us h2{
-	margin-left: 30px;
+	margin-left: 10px;
+	font-size: 20px;
+	display: flex;
+	color: black;
 }
 
 .card-green-us h3{
