--- a/css/components/cards.css
+++ b/css/components/cards.css
@@ -334,13 +334,13 @@ color: black;
    
 .card-banner { 
 	display: flex;
-	align-items: right;
 	justify-content: space-between;
 	padding: 20px;
 }
 
 .card-banner img { 
 	width: 350px;
+	height: 500px;
 }
 
 .card-banner h1 {
@@ -348,6 +348,7 @@ color: black;
   padding-left: 20px;
   font-size: 80px;
   color: #044723;
+  margin-left: 900px;
 }
 
 .card-white {
@@ -358,13 +359,14 @@ color: black;
 	border-radius: 2px;
 	margin: 0px;
 	text-align: left;
-	margin-right: 900px;
+  width: 190px;
 	border-width: 60px;
 }
 
 .card-white img {
-	width: 100%;
 	position: center;
+	width: 240px;
+	height:140px;
 }
 
 .card-white h1 {
@@ -373,33 +375,40 @@ color: black;
 }
 
 .card-white h2 {
-	font-size: 8;
+	font-size: 24px;
+}
+
+.card-white a {
+	color: black;
 }
 
 .card-white {
-  flex-basis: 250px;
-	flex-grow: 1;
+  flex-basis: 150px;
+  flex-grow: 1;
 	margin: 20px;
 }
 
-.cards {
+.cards-sneakers {
   display: flex;
-	flex-wrap: wrap;
-	margin-left: 190px;
-	z-index: 1;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  flex-basis: 0;
+  margin-left:190px;
+  z-index: 1;
 }
 
 /* For the product page */
 
 .card-green {
 	background-color: #C5D9C0;
-	border-color: #044723;
+  border-color: #044723;
 	padding: 10px;
 	padding-top: -10px;
 	border-radius: 2px;
 	margin: 0px;
 	text-align: left;
 	border-width: 60px;
+	width: 90px;
 
 }
 
@@ -409,9 +418,10 @@ color: black;
 	margin: 10px;
 }
 
-.cards {
-   display: flex;
+.cards-product {
+  display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 
@@ -420,6 +430,7 @@ color: black;
 	position: center;
   width: 200px;
   height: 100px;
+  background-color: none;
 }
 
 .card-green h1 {
@@ -428,22 +439,32 @@ color: black;
 }
 
 .card-green h2 {
-	font-size: 8;
+	font-size: 24px;
+	color: black;
 }
 
 .card-green h3 {
-  font-family: 'Fjalla One', sans-serif;
+    font-family: 'Fjalla One', sans-serif;
     font-weight: bold;
     font-size: 26px;
     color: black;
+    background-color: none;
 }
 
-.card-green h4 {
-  font-family: 'Fjalla One', sans-serif;
+.card-green h5 {
+    font-family: 'Fjalla One', sans-serif;
+    background-color: none;
     font-weight: bold;
     font-size: 19px;
     color: black;
 }
+
+.card-interest h2 {
+	color: black;
+	font-size: 24px;
+	margin-left: 10px;
+}
+
 
 .card-little {
   display: flex;
